--- a/src/Compoents/Styles/Contact.css
+++ b/src/Compoents/Styles/Contact.css
@@ -32,8 +32,9 @@
     font-size: 20px;
 }
 
-h1{
+h2{
     font-weight: bold;
+    color:red;
 }
 
 
@@ -44,5 +45,5 @@ h1{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.8;
+    opacity: 0.6;
       }
