first commit to project

--- a/src/Compoents/Styles/ApplyJobs.css
+++ b/src/Compoents/Styles/ApplyJobs.css
@@ -1,10 +1,12 @@
 .errmsg {
-    color: red;
+    color:red;
 }
 
-.container {
+.container{
     margin-top: 55px;
-    margin-bottom: 65px;
+   
+    margin-bottom:65px;
+    
     
 }
 
@@ -13,8 +15,7 @@
 }
 
 
-
-#apply-btn {
+#apply-btn1 {
     text-align: center;
 }
 
@@ -22,12 +23,23 @@
     text-align: center;
 }
 
+
+
+h2{
+    font-weight: bold;
+    color:rgb(7, 36, 99);
+}
+
+
 .bg {
     
-    background-image: url("/src/Compoents/Images/gt_img3.jpg");
+    background-image: url("/src/Compoents/Images/image4.webp");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.8;
+    opacity: 0.6;
       }
+    .one{
+        color:black
+    }
