--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.fixed-bottom {
-  height: 40px;
-  background-color: rgb(20, 8, 31);
+.footer {
+  height: 20px;
+  background-color: rgb(7, 36, 99);
   color: white;
 }
 
