--- a/src/Compoents/Styles/Jobs.css
+++ b/src/Compoents/Styles/Jobs.css
@@ -1,11 +1,3 @@
-.card-image {
-    height: 100px;
-    width:100px
-}
-
-.card-Img {
-    flex-direction: row;
-}
 
 .card.flex-row.flex-wrap {
     padding: 20px;
@@ -13,13 +5,16 @@
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 5px;
-    border: solid black 3px;
+    border: solid rgb(211, 201, 197) 3px;
 }
 
 i {
     padding: 5px;
-    margin-left: 10px;
+    margin-left: 5px;
 } 
+.card-title1{
+    font-weight: bold;
+}
 
 
 
